Bug 149890 - [CSS Grid Layout] Fix grid-{row, column, area} shorthand CSSOM serialization
Summary: [CSS Grid Layout] Fix grid-{row, column, area} shorthand CSSOM serialization
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Javier Fernandez
URL:
Keywords: BlinkMergeCandidate, BrowserCompat, GoodFirstBug, InRadar, WPTImpact
Depends on:
Blocks: 149891
  Show dependency treegraph
 
Reported: 2015-10-07 13:16 PDT by Javier Fernandez
Modified: 2024-09-05 14:43 PDT (History)
12 users (show)

See Also:


Attachments
Patch (11.57 KB, patch)
2015-10-07 13:37 PDT, Javier Fernandez
svillar: review-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Javier Fernandez 2015-10-07 13:16:05 PDT
The grid-row, grid-column and grid-area shorthands must use slash instead of whitespace as separator.
Comment 1 Javier Fernandez 2015-10-07 13:29:12 PDT
Fixing this bug would require to merge http://crrev.com/1132753002 patch.
Comment 2 Javier Fernandez 2015-10-07 13:37:54 PDT
Created attachment 262632 [details]
Patch
Comment 3 Sergio Villar Senin 2015-10-08 05:08:57 PDT
Comment on attachment 262632 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=262632&action=review

> Source/WebCore/css/CSSPropertyNames.in:493
> +-webkit-grid-area [Longhands=-webkit-grid-row-start|-webkit-grid-column-start|-webkit-grid-row-end|-webkit-grid-column-end]

Wow this is bad. This means that we're expanding incorrectly the shorthand and that we have no tests to verify that. Please use a different bug to upload this change with its corresponding test.
Comment 4 Carlos Alberto Lopez Perez 2020-03-30 12:02:44 PDT
I think this is causing failures on the WPT test https://wpt.live/css/css-grid/parsing/grid-area-valid.html
Comment 5 Ahmad Saleem 2022-09-29 00:43:09 PDT
(In reply to Carlos Alberto Lopez Perez from comment #4)
> I think this is causing failures on the WPT test
> https://wpt.live/css/css-grid/parsing/grid-area-valid.html

In this above test case:

Safari 16 -> 24 Pass and 32 Fail
Safari TP 154 -> 24 Pass and 32 Fail
Chrome Canary 108 -> 24 Pass and 32 Fail
Firefox Nightly 107 -> 56 Pass
Comment 6 Radar WebKit Bug Importer 2024-07-25 17:24:50 PDT
<rdar://problem/132530604>
Comment 7 zak ridouh 2024-08-13 00:32:47 PDT
Pull request: https://github.com/WebKit/WebKit/pull/32101
Comment 8 EWS 2024-09-05 14:43:08 PDT
Committed 283234@main (3725a9f39e9d): <https://commits.webkit.org/283234@main>

Reviewed commits have been landed. Closing PR #32101 and removing active labels.