[CSS Grid Layout] Fix grid-{row, column, area} shorthand CSSOM serialization https://bugs.webkit.org/show_bug.cgi?id=149890 <rdar://132530604>

Reviewed by Matthieu Dubet.

Fix grid-area serialization, which previously was not fully following
the CSS Spec. Gains us a small amount on interop, and we are now passing
all tests in the grid-area-valid test[1].

This was done by adding a new child class of `CSSValue` called
`CSSGridLineValue`, and using it instead of `CSSValueList`, and
implementing the `customCSSText()` function in line with the spec.

[1] https://wpt.live/css/css-grid/parsing/grid-area-valid.html

    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/parsing/grid-area-shorthand-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/parsing/grid-area-valid-expected.txt:
    * Source/WebCore/Sources.txt:
    * Source/WebCore/WebCore.xcodeproj/project.pbxproj:
    * Source/WebCore/css/CSSGridLineNamesValue.cpp:
    * Source/WebCore/css/CSSGridLineValue.cpp: Added.
    (WebCore::CSSGridLineValue::customCSSText const):
    (WebCore::CSSGridLineValue::CSSGridLineValue):
    (WebCore::CSSGridLineValue::create):
    (WebCore::CSSGridLineValue::equals const):
    * Source/WebCore/css/CSSGridLineValue.h: Added.
    * Source/WebCore/css/CSSTimingFunctionValue.h:
    * Source/WebCore/css/CSSValue.cpp:
    (WebCore::CSSValue::visitDerived):
    * Source/WebCore/css/CSSValue.h:
    (WebCore::CSSValue::isGridLineValue const):
    * Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
    (WebCore::CSSPropertyParserHelpers::consumeGridLine):
    * Source/WebCore/style/StyleBuilderConverter.h:
    (WebCore::Style::BuilderConverter::createGridPosition):

Canonical link: https://commits.webkit.org/283234@main